--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
             </div>
         </div>
         
-        <form class="d-flex justify-content-end" role="search">
+        <form role="search">
             <input class="form-control me-2" type="search" placeholder="Zoeken" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Zoeken</button>
         </form>
