--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -9,10 +9,10 @@ body {
 
 /* Header en Footer */
 header {
-    padding: 12px;
+    padding: 12px 40px;
     gap: 20px;
 
-    /* Row the Header */
+    /* Align items in a Row */
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -26,21 +26,38 @@ footer #footerText {
     margin-left: 25px;
 }
 
-/* Media */
-@media (min-width: 768px) {
-    html {
-        /*font-size: 16px;*/
-    }
-}
-
 /* Container */
 .container {
-    margin: 20px;
+    margin: 25px auto;
+}
+.createButton {
+    margin: 6px 0;
+    border-radius: 50px;
+    box-shadow: 0 0 40px lightgreen;
+}
+.createButtonParent {
+    text-align: center;
+}
+.createButtonParent a {
+    text-align: center;
+    border-radius: 50px;
+}
+.createButtonParent a:first-child {
+    padding: 0;
+    margin: 0;
+}
+.createButtonParent a {
+    height: 26px;
+}
+.bi-arrow-left {
+    padding: 4px;
+    border-radius: 50px;
+    box-shadow: 0 0 40px lightblue;
 }
 
 /* Logo */
 #logo {
-    box-shadow: 0 0 25px grey;
+    box-shadow: 0 0 16px grey;
     border-radius: 50%;
 }
 #logo img {
@@ -49,26 +66,54 @@ footer #footerText {
 }
 
 /* Navbar */
-header .dropdown:hover {
+.dropdown:hover {
     background-color: #f4f4f4;
     cursor: pointer;
 }
-/* Dropdown */ nav .dropdown { 
+nav .dropdown /* Dropdown */ {
     position: relative;
     display: inline-block;
 }
-header .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #fcfcfc;
     min-width: 160px;
-    box-shadow: 0 0 rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
+
+    border-radius: 6px;
+    box-shadow: 0 0 20px lightgrey;
 }
-header .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
     display: block;
 }
-header .dropdown span {
+.dropdown-item:focus {
+    background-color: grey;
+}
+.dropdown-item:hover {
+    background-color: #f1f1f1;
+    border-radius: 6px;
+}
+.dropdown-item:active {
+    background-color: #e4e4e4;
+    color: black;
+}
+.dropdown span {
     font-size: 18px;
+}
+header form /* Form */ {
+    display: flex;
+    margin-left: auto;
+}
+header form * {
+    box-shadow: 0 0 12px lightgrey;
+    border-radius: 50px !important;
+}
+
+/* Media */
+@media (max-width: 780px) {
+    header form {
+        display: none;
+    }
 }
